# SMU-Capstone

./: .gitignore  .rayignore  README.md  lefthook.yml  main.py  pyproject.toml  thesis.md
data/splits/: metadata.json
data/splits/evaluation/: split_000.json  split_001.json  split_002.json  split_003.json  split_004.json  split_005.json  split_006.json  split_007.json  split_008.json  split_009.json  split_010.json  split_011.json  split_012.json  split_013.json  split_014.json  split_015.json  split_016.json  split_017.json  split_018.json  split_019.json  split_020.json  split_021.json  split_022.json  split_023.json  split_024.json  split_025.json  split_026.json  split_027.json  split_028.json  split_029.json  split_030.json  split_031.json  split_032.json  split_033.json  split_034.json  split_035.json  split_036.json  split_037.json  split_038.json  split_039.json  (+29 more)
data/splits/sequences/evaluation/: split_000.json
data/splits/sequences/validation/: split_000.json
data/splits/validation/: split_000.json  split_001.json  split_002.json
notebooks/: data_loading.ipynb  findings.ipynb  roi_validation_analysis.ipynb
outputs/: samuel.sim.2024.168429.out  samuel.sim.2024.168482.out  samuel.sim.2024.168527.out  samuel.sim.2024.175943.out
outputs/analysis/: rq4_per_band_summary.csv
outputs/analysis/baseline_decomposition/20260427_122215/: decomposition.csv  main_results.csv  summary.json
outputs/analysis/panel_regression/20260504_003145/: coefficients.csv  predicted_pc_by_band_model.csv  regression_summary.txt
outputs/analysis/transaction_return_regression/20260504_004849/: coefficients.csv  regression_summary.txt  summary.json
outputs/configs/20260415_005104/: best_hyperparameters.json
outputs/configs/20260415_093327/: best_hyperparameters.json
outputs/eda/: summary.json
outputs/results/evaluation/pc_lgcn/20260505_125105/stratified_lambda_0.0/: per_split_metrics.csv  recommendations.parquet
outputs/results/evaluation/pc_lgcn/20260505_125105/stratified_lambda_1.0/: per_split_metrics.csv  recommendations.parquet
outputs/results/tuning/hybrid_dual_head/: 20260415_134435.csv
outputs/results/tuning/light_gcn/: 20260414_222432.csv  20260415_011528.csv
outputs/results/tuning/pc_lgcn/: 20260505_125105.csv
outputs/results/tuning/random_forest/: 20260415_005935.csv
outputs/results/tuning/sasrec/: 20260414_230354.csv  20260415_013528.csv
outputs/results/tuning/tisasrec/: 20260415_032124.csv
paper/: FAR-Trans.md
papers/Causal Graph Convolution for Credit Bond Recommendation/: paper.md
papers/FAR-Trans An Investment Dataset for Financial Asset Recommendation/: paper.md
papers/Investors Are (Not) Always Right/: paper.md
papers/Mean-Variance Efficient Collaborative Filtering/: paper.md
papers/PfoTGNRec Temporal Graph Network with Mean-Variance Efficient Sampling/: paper.md
papers/Risk-Aware Utility Re-Ranking for Financial Asset Recommendation/: paper.md
scripts/: evaluate-baselines.sh  far-tuning.sh
src/: __init__.py
src/analysis/: __init__.py  annotate.py  baseline_decomposition.py  eda_profile_coherence.py  findings.py  regression.py  run_artefacts.py
src/config/: __init__.py  registry.py  schemas.py  settings.py
src/data/: __init__.py  loading.py  sequence_analysis.py  sequences.py  splitting.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  technical_indicators.py
src/models/: __init__.py  hybrid.py  light_gcn.py  profile_coherent_lgcn.py  protocol.py  random_forest.py  sasrec.py  tisasrec.py  train.py
src/pipeline/: __init__.py  baseline_evaluation.py  decomposition.py  eda.py  export_figures.py  grid_search.py  orchestrator.py  panel_regression.py  preprocessing.py  runner.py  stratified_training.py  transaction_return_regression.py  tuning.py
src/profile_coherence/: __init__.py  customer_profile.py  discordance.py  risk_classification.py
src/utils/: metrics.py  profile_coherence.py
submission/paper/: ijcai26.aux  ijcai26.bbl  ijcai26.fdb_latexmk  ijcai26.fls  ijcai26.out  ijcai26.tex  metadata.tex
submission/paper/sections/: 00-abstract.tex  01-introduction.tex  02-related-work.tex  03-method.tex  04-experimental-setup.tex  05-results.tex  06-limitations.tex  07-conclusion.tex
tests/: __init__.py  conftest.py
tests/config/: __init__.py
tests/data/: __init__.py
tests/evaluation/: test_pc_at_k.py
tests/features/: __init__.py
tests/models/: __init__.py
tests/pipeline/: __init__.py
tests/profile_coherence/: test_customer_profile.py  test_discordance.py  test_risk_classification.py
thesis/: ijcai26.aux  ijcai26.bbl  ijcai26.bib  ijcai26.blg  ijcai26.fdb_latexmk  ijcai26.fls  ijcai26.out  ijcai26.tex  preamble.tex
thesis/sections/: 00-abstract.tex  01-introduction.tex  02-related-work.tex  03-method.tex  04-experimental-setup.tex  05-results.tex  07-conclusion.tex  08-reproducibility.tex
