[project]
name = "smu-capstone"
version = "0.1.0"
description = "Profile-coherent financial asset recommendation: a measurement framework and a profile-aware LightGCN extension"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "python-dateutil>=2.9.0.post0",
    "ray[tune]==2.54.1",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.4",
    "torch==2.11.0",
    "torch-geometric>=2.7.0",
]

[dependency-groups]
dev = [
    "graphifyy>=0.4.10",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "lefthook>=2.1.4",
    "poethepoet>=0.42.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }

[tool.poe.tasks]
lint = { cmd = "uv run ruff check src/ tests/", help = "Lint source and test files with ruff" }
format = { cmd = "uv run ruff format src/ tests/", help = "Format source and test files with ruff" }
type = { cmd = "uv run ty check src/ tests/", help = "Type-check source and test files with ty" }
test = { cmd = "uv run pytest tests/ -v", help = "Run test suite with pytest" }
setup = { cmd = "uv run lefthook install", help = "Install git hooks via lefthook" }

[tool.poe.tasks.preprocess]
help = "Preprocess FAR-Trans data: load, split, and save to disk"
cmd = "uv run python -m src.pipeline.preprocessing"

[tool.poe.tasks.eda]
help = "Run the profile-coherence dataset audit and save figures to outputs/eda/profile_coherence/"
cmd = "uv run python -m src.analysis.eda_profile_coherence"

[tool.poe.tasks.evaluate-baselines]
help = "Ray-driven grid sweep across RF + LightGCN (6 + 8 = 14 trials). Each trial = full 69-split eval."
shell = "uv run python -m src.pipeline.baseline_evaluation --device $device ${models:+--models $models} --splits-dir $splits_dir --results-dir $results_dir ${splits_limit:+--splits-limit $splits_limit} ${max_concurrent_trials:+--max-concurrent-trials $max_concurrent_trials}"

  [[tool.poe.tasks.evaluate-baselines.args]]
  name = "device"
  options = ["--device"]
  default = "cuda"
  help = "Compute device: cuda or cpu"

  [[tool.poe.tasks.evaluate-baselines.args]]
  name = "models"
  options = ["--models"]
  default = ""
  help = "Subset of {random_forest, light_gcn} (default: both)"

  [[tool.poe.tasks.evaluate-baselines.args]]
  name = "splits_dir"
  options = ["--splits-dir"]
  default = "data/splits"
  help = "Directory containing preprocessed splits"

  [[tool.poe.tasks.evaluate-baselines.args]]
  name = "results_dir"
  options = ["--results-dir"]
  default = "outputs/results"
  help = "Directory to save evaluation result CSVs"

  [[tool.poe.tasks.evaluate-baselines.args]]
  name = "splits_limit"
  options = ["--splits-limit"]
  default = ""
  help = "Run only the first N splits (smoke test). Default: all 69 splits."

  [[tool.poe.tasks.evaluate-baselines.args]]
  name = "max_concurrent_trials"
  options = ["--max-concurrent-trials"]
  default = ""
  help = "Cap concurrent Ray trials (useful on memory-constrained hosts)."


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:torch",
    "ignore::DeprecationWarning:torch",
    "ignore::DeprecationWarning:torch_geometric",
]
