[project]
name = "smu-capstone"
version = "0.1.0"
description = "Profile-coherent financial asset recommendation: a measurement framework and a profile-aware LightGCN extension"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "python-dateutil>=2.9.0.post0",
    "ray[tune]==2.54.1",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.4",
    "torch==2.11.0",
    "torch-geometric>=2.7.0",
]

[dependency-groups]
dev = [
    "graphifyy>=0.4.10",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "lefthook>=2.1.4",
    "poethepoet>=0.42.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }

[tool.poe.tasks]
lint = { cmd = "uv run ruff check src/ notebooks/ --fix", help = "Lint source files and notebooks with ruff (applies safe fixes in place)" }
format = { cmd = "uv run ruff format src/ notebooks/", help = "Format source files and notebooks with ruff" }
type = { cmd = "uv run ty check src/ notebooks/", help = "Type-check source files and notebooks with ty" }
setup = { cmd = "uv run lefthook install", help = "Install git hooks via lefthook" }
jlab = { cmd = "uv run --with jupyter jupyter lab", help = "Run Jupyter Lab IDE" }

[tool.poe.tasks.preprocess]
help = "Preprocess FAR-Trans data: load, split, and save to disk"
cmd = "uv run python -m src.pipeline.preprocessing"

[tool.poe.tasks.eda]
help = "Run the profile-coherence dataset audit and save figures to outputs/eda/"
cmd = "uv run python -m src.pipeline.eda"

[tool.poe.tasks.tune]
help = "End-to-end thesis pipeline: RF + LightGCN grid, 2-model decomposition, RQ2 transaction-return regression, and RQ3 model panel regression."
shell = "uv run python -m src.pipeline.orchestrator --device $device --splits-dir $splits_dir --results-dir $results_dir ${splits_limit:+--splits-limit $splits_limit}"

  [[tool.poe.tasks.tune.args]]
  name = "device"
  options = ["--device"]
  default = "cuda"
  help = "Compute device: cuda or cpu"

  [[tool.poe.tasks.tune.args]]
  name = "splits_dir"
  options = ["--splits-dir"]
  default = "data/splits"
  help = "Directory containing preprocessed splits"

  [[tool.poe.tasks.tune.args]]
  name = "results_dir"
  options = ["--results-dir"]
  default = "outputs/results"
  help = "Directory to save evaluation result CSVs"

  [[tool.poe.tasks.tune.args]]
  name = "splits_limit"
  options = ["--splits-limit"]
  default = ""
  help = "Run only the first N splits (smoke test). Default: all 69 splits."

[tool.poe.tasks.stratify]
help = "RQ4 stratified profile-coherent LightGCN: lambda=0 ablation and lambda=1 treatment, evaluated on the same 69 splits."
shell = "uv run python -m src.pipeline.stratified_training --device $device --splits-dir $splits_dir --results-dir $results_dir --configs-dir $configs_dir ${splits_limit:+--splits-limit $splits_limit}"

  [[tool.poe.tasks.stratify.args]]
  name = "device"
  options = ["--device"]
  default = "cuda"
  help = "Compute device: cuda or cpu"

  [[tool.poe.tasks.stratify.args]]
  name = "splits_dir"
  options = ["--splits-dir"]
  default = "data/splits"
  help = "Directory containing preprocessed splits"

  [[tool.poe.tasks.stratify.args]]
  name = "results_dir"
  options = ["--results-dir"]
  default = "outputs/results"
  help = "Directory to save evaluation result CSVs"

  [[tool.poe.tasks.stratify.args]]
  name = "configs_dir"
  options = ["--configs-dir"]
  default = "outputs/configs"
  help = "Directory of timestamped baseline configs to inherit LightGCN hyperparameters from."

  [[tool.poe.tasks.stratify.args]]
  name = "splits_limit"
  options = ["--splits-limit"]
  default = ""
  help = "Run only the first N splits (smoke test). Default: all 69 splits."


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:torch",
    "ignore::DeprecationWarning:torch",
    "ignore::DeprecationWarning:torch_geometric",
]
